# PoiBin

./: .gitignore  README.md  requirements.txt  setup.cfg
poisson_binomial/: __init__.py  poisson_binomial.py
tests/: poisson_binomial_test.py
