[metadata]
name = Poisson Binomial Distribution
version = 0.0.1
author = Ali Faraji
author_email = ali@faraji.info
description = A package for Poisson Binomial Distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alifa98/PoiBin
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=3.6

[options]
packages = find:
install_requires =
    numpy>=1.18.0

[options.extras_require]
test =
    pytest
